--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fundo"
-    tools:context='.CadastroUsuarioActivity'>
-
-    <!-- Elementos da tela de cadastro de usuário -->
+    tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/passwordEditText2"
+        android:id="@+id/passwordEditText"
         android:layout_width="378dp"
         android:layout_height="48dp"
         android:layout_alignParentStart="true"
@@ -25,7 +23,7 @@
         android:textColorHint="#FBFAFA" />
 
     <EditText
-        android:id="@+id/emailEditText2"
+        android:id="@+id/emailEditText"
         android:layout_width="375dp"
         android:layout_height="48dp"
         android:layout_alignParentStart="true"
@@ -42,13 +40,33 @@
         android:textColorHint="#FBF9F9" />
 
     <Button
-        android:id="@+id/gravarButton"
+        android:id="@+id/novoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/passwordEditText"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="210dp"
-        android:text="Gravar" />
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="43dp"
+        android:text="Novo" />
+
+    <TextView
+        android:id="@+id/forgotPasswordLink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/passwordEditText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-169dp"
+        android:text="Esqueceu a senha?"
+        android:textColor="#0000FF" />
+
+    <Button
+        android:id="@+id/loginButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/passwordEditText"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="45dp"
+        android:text="Entrar" />
 
 </RelativeLayout>
