--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,37 +7,36 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/passwordEditText"
-        android:layout_width="378dp"
-        android:layout_height="48dp"
+        android:id="@+id/emailEditText"
+        android:layout_width="379dp"
+        android:layout_height="51dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="357dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="310dp"
         android:layout_marginEnd="17dp"
-        android:hint="Senha"
-        android:inputType="textPassword"
-        android:textColor="@color/white"
-        android:textColorHint="#FBFAFA" />
-
-    <EditText
-        android:id="@+id/emailEditText"
-        android:layout_width="375dp"
-        android:layout_height="48dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="295dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="388dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:textColor="@color/white"
         android:textColorHint="#FBF9F9" />
+
+    <EditText
+        android:id="@+id/passwordEditText"
+        android:layout_width="378dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/emailEditText"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="403dp"
+        android:layout_marginEnd="19dp"
+        android:hint="Senha"
+        android:inputType="textPassword"
+        android:textColor="@color/white"
+        android:textColorHint="#FBFAFA" />
 
     <Button
         android:id="@+id/novoButton"
@@ -45,8 +44,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/passwordEditText"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="43dp"
+        android:layout_marginTop="66dp"
+        android:layout_marginEnd="17dp"
         android:text="Novo" />
 
     <TextView
@@ -66,7 +65,7 @@
         android:layout_below="@+id/passwordEditText"
         android:layout_centerVertical="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="72dp"
         android:text="Entrar" />
 
 </RelativeLayout>
