--- a/app/src/main/res/layout/activity_configuracoes.xml
+++ b/app/src/main/res/layout/activity_configuracoes.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,34 +14,47 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="49dp"
-        android:layout_marginTop="566dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="38dp"
+        android:layout_marginBottom="201dp"
         android:text="Liga/Desliga" />
 
     <Button
         android:id="@+id/configurarButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="564dp"
-        android:layout_marginEnd="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="134dp"
+        android:layout_marginBottom="201dp"
         android:text="Configurar" />
 
     <Button
         android:id="@+id/retornarButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/configurarButton"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="292dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="-47dp"
+        android:text="Voltar" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="334dp"
+        android:layout_height="166dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="157dp"
-        android:layout_marginTop="387dp"
-        android:layout_marginEnd="166dp"
-        android:layout_marginBottom="296dp"
-        android:text="Voltar" />
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="291dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="274dp"
+        android:text="LIGUE O DISPOSITIVO E EM SEGUIDA FAÇA A SUA CONFIGURAÇÃO. (botão liga/desliga)  PARA QUE A OPERAÇÃO SEJA REALIZADA COM SUCESSO MANTENHA O APARELHO LIGADO E O CELULAR CONECTADO AO DISPOSITIVO."
+        app:autoSizeTextType="uniform" />
 
 
 </RelativeLayout>
