--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -4,51 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fundo"
-    tools:context='.CadastroUsuarioActivity'>
-
-    <!-- Elementos da tela de cadastro de usuário -->
-
-    <EditText
-        android:id="@+id/passwordEditText2"
-        android:layout_width="378dp"
-        android:layout_height="48dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="357dp"
-        android:layout_marginEnd="17dp"
-        android:hint="Senha"
-        android:inputType="textPassword"
-        android:textColor="@color/white"
-        android:textColorHint="#FBFAFA" />
-
-    <EditText
-        android:id="@+id/emailEditText2"
-        android:layout_width="375dp"
-        android:layout_height="48dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="295dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="388dp"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:textColor="@color/white"
-        android:textColorHint="#FBF9F9" />
-
-    <Button
-        android:id="@+id/gravarButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="210dp"
-        android:text="Gravar" />
-
-</RelativeLayout>
+    tools:context=".CadastroUsuario"/>
