--- a/app/src/main/res/layout/activity_configurar.xml
+++ b/app/src/main/res/layout/activity_configurar.xml
@@ -10,22 +10,25 @@
         android:id="@+id/aparelhoEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="356dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="16dp"
         android:foregroundTint="#F8F5F5"
         android:hint="Aparelho"
         android:textColor="@color/white"
-        android:textColorHint="#FBFAFA" />/>
+        android:textColorHint="#FBFAFA" />
 
     <EditText
         android:id="@+id/temporizadorEditText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_height="48dp"
+        android:layout_below="@id/aparelhoEditText"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="421dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:hint="Temporizador"
@@ -34,12 +37,25 @@
 
     <Button
         android:id="@+id/gravarButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/temporizadorEditText"
+        android:layout_width="102dp"
+        android:layout_height="58dp"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="166dp"
-        android:layout_marginTop="39dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="47dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="181dp"
         android:text="Gravar" />
+
+    <Button
+        android:id="@+id/retornarButton"
+        android:layout_width="109dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="222dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="188dp"
+        android:text="Voltar" />
 
 </RelativeLayout>
