--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -4,4 +4,79 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fundo"
-    tools:context=".CadastroUsuario"/>
+    tools:context=".CadastroUsuarioActivity">
+
+    <Button
+        android:id="@+id/gravarButton"
+        android:layout_width="102dp"
+        android:layout_height="58dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="47dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="181dp"
+        android:text="Gravar" />
+
+    <Button
+        android:id="@+id/retornarButton"
+        android:layout_width="102dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="222dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="188dp"
+        android:text="Voltar" />
+
+    <EditText
+        android:id="@+id/emailEditText"
+        android:layout_width="379dp"
+        android:layout_height="51dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="310dp"
+        android:layout_marginEnd="17dp"
+        android:hint="Digite seu Email"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/white"
+        android:textColorHint="#FBF9F9" />
+
+    <EditText
+        android:id="@+id/passwordEditText"
+        android:layout_width="378dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/emailEditText"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="377dp"
+        android:layout_marginEnd="15dp"
+        android:hint="Digite uma Senha"
+        android:inputType="textPassword"
+        android:textColor="@color/white"
+        android:textColorHint="#FBFAFA" />
+
+    <Button
+        android:id="@+id/showUsersButton"
+        android:layout_width="100dp"
+        android:layout_height="105dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="196dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="43dp"
+        android:text="Mostrar Usuários" />
+
+
+    <ListView
+        android:id="@+id/userListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
