--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,8 +46,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="21dp"
-        android:text="Novo"
-        android:onClick="openCadastroUsuario"/>
+        android:text="Novo"/>
 
     <TextView
         android:id="@+id/forgotPasswordLink"
