--- a/app/src/main/res/layout/activity_configuracoes.xml
+++ b/app/src/main/res/layout/activity_configuracoes.xml
@@ -9,34 +9,34 @@
 
     <Button
         android:id="@+id/ligaDesligaButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="38dp"
-        android:layout_marginBottom="201dp"
+        android:layout_marginBottom="200dp"
         android:text="Liga/Desliga" />
 
     <Button
         android:id="@+id/configurarButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="134dp"
-        android:layout_marginBottom="201dp"
+        android:layout_marginEnd="34dp"
+        android:layout_marginBottom="200dp"
         android:text="Configurar" />
 
     <Button
         android:id="@+id/retornarButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/configurarButton"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="292dp"
-        android:layout_marginEnd="31dp"
-        android:layout_marginBottom="-47dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="150dp"
+        android:layout_marginEnd="153dp"
+        android:layout_marginBottom="116dp"
         android:text="Voltar" />
 
     <TextView
