--- a/app/src/main/res/layout/activity_lista_usuarios.xml
+++ b/app/src/main/res/layout/activity_lista_usuarios.xml
@@ -9,16 +9,55 @@
         android:id="@+id/userListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/returnButton" />
+        android:layout_above="@+id/returnButton"
+        android:visibility="gone"/>
 
-    <Button
-        android:id="@+id/returnButton"
+    <TextView
+        android:id="@+id/errorTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Usuário logado não é administrador"
+        android:visibility="gone" />
+    <LinearLayout
+        android:id="@+id/userIdEditTextContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="156dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="141dp"
+        android:layout_marginBottom="76dp"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <EditText
+            android:id="@+id/userIdEditText"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:hint="ID a ser excluído" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/returnButton"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="253dp"
+        android:layout_marginBottom="15dp"
         android:text="Voltar" />
 
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="26dp"
+        android:layout_marginBottom="12dp"
+        android:text="Excluir"
+        android:enabled="false"/>
+
 </RelativeLayout>
+
+
