--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,18 +40,18 @@
 
     <Button
         android:id="@+id/novoButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/passwordEditText"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="38dp"
         android:layout_marginEnd="21dp"
         android:text="Novo"/>
 
     <TextView
         android:id="@+id/forgotPasswordLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
         android:layout_alignBottom="@+id/passwordEditText"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-211dp"
@@ -62,8 +62,8 @@
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/passwordEditText"
         android:layout_centerVertical="true"
         android:layout_marginStart="16dp"
