--- a/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -8,19 +8,31 @@
 
     <Button
         android:id="@+id/atualizarPerfilButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="124dp"
+        android:layout_marginBottom="285dp"
         android:text="Atualizar Perfil" />
 
     <Button
         android:id="@+id/configButton"
         android:layout_width="160dp"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="124dp"
-        android:layout_marginBottom="198dp"
+        android:layout_marginBottom="201dp"
         android:text="Configuração" />
+
+    <Button
+        android:id="@+id/showUsersButton"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="124dp"
+        android:layout_marginBottom="121dp"
+        android:text="Listar Usuários" />
 
 </RelativeLayout>
