--- a/app/src/main/res/layout/activity_atualizacao_usuario.xml
+++ b/app/src/main/res/layout/activity_atualizacao_usuario.xml
@@ -36,21 +36,24 @@
 
     <Button
         android:id="@+id/atualizarButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/novaPasswordEditText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="17dp"
+        android:layout_marginBottom="256dp"
         android:text="Atualizar" />
 
     <Button
         android:id="@+id/configButton"
         android:layout_width="160dp"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="130dp"
-        android:layout_marginBottom="186dp"
+        android:layout_marginStart="219dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="256dp"
         android:text="Configuração" />
 
 </RelativeLayout>
