--- a/app/src/main/res/layout/activity_configurar.xml
+++ b/app/src/main/res/layout/activity_configurar.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/fundo"
     tools:context=".ConfigurarActivity">
 
-    <EditText
+   <!-- <EditText
         android:id="@+id/aparelhoEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -21,12 +21,12 @@
         android:hint="Aparelho"
         android:textColor="@color/white"
         android:textColorHint="#FBFAFA" />
-
+-->
     <EditText
         android:id="@+id/temporizadorEditText"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_below="@id/aparelhoEditText"
+        android:layout_below="@+id/aparelhoSpinner"
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
@@ -58,5 +58,20 @@
         android:layout_marginEnd="75dp"
         android:layout_marginBottom="157dp"
         android:text="Voltar" />
+
+    <Spinner
+        android:id="@+id/aparelhoSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="315dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="16dp"
+        android:foregroundTint="#F8F5F5"
+        android:textColor="@color/white"
+        android:textColorHint="#FBFAFA" />
 
 </RelativeLayout>
