--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,29 +40,29 @@
 
     <Button
         android:id="@+id/novoButton"
-        android:layout_width="120dp"
+        android:layout_width="140dp"
         android:layout_height="50dp"
         android:layout_below="@+id/passwordEditText"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="38dp"
         android:layout_marginEnd="21dp"
-        android:text="Novo"/>
+        android:text="Novo usuário"/>
 
-    <TextView
+    <Button
         android:id="@+id/forgotPasswordLink"
-        android:layout_width="160dp"
+        android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_alignBottom="@+id/passwordEditText"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-211dp"
-        android:text="Esqueceu a senha?"
+        android:text="Esqueci a senha"
         android:textColor="#FFFFFFFF"
         android:clickable="true"/>
 
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="120dp"
+        android:layout_width="140dp"
         android:layout_height="50dp"
         android:layout_below="@+id/passwordEditText"
         android:layout_centerVertical="true"
