--- a/app/src/main/res/layout/activity_atualizacao_usuario.xml
+++ b/app/src/main/res/layout/activity_atualizacao_usuario.xml
@@ -9,7 +9,7 @@
     <EditText
         android:id="@+id/novoEmailEditText"
         android:layout_width="379dp"
-        android:layout_height="51dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -22,7 +22,7 @@
     <EditText
         android:id="@+id/novaPasswordEditText"
         android:layout_width="379dp"
-        android:layout_height="51dp"
+        android:layout_height="50dp"
         android:layout_below="@+id/novoEmailEditText"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -34,14 +34,26 @@
         android:hint="Nova Senha"
         android:textColorHint="@color/white"/>
 
+    <Spinner
+        android:id="@+id/roleSpinner"
+        android:layout_width="379dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="430dp"
+        android:entries="@array/roles" />
+
     <Button
         android:id="@+id/atualizarButton"
         android:layout_width="160dp"
         android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginBottom="256dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginBottom="142dp"
         android:text="Atualizar" />
 
     <Button
@@ -51,9 +63,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="219dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="256dp"
+        android:layout_marginStart="218dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="142dp"
         android:text="Configuração" />
+
 
 </RelativeLayout>
