--- a/app/src/main/res/layout/activity_configurar.xml
+++ b/app/src/main/res/layout/activity_configurar.xml
@@ -29,7 +29,8 @@
         android:layout_marginStart="78dp"
         android:layout_marginEnd="75dp"
         android:layout_marginBottom="232dp"
-        android:text="Gravar" />
+        android:text="Gravar"
+        android:background="@drawable/rounded_button"/>
 
     <Button
         android:id="@+id/retornarButton"
@@ -41,7 +42,8 @@
         android:layout_marginStart="78dp"
         android:layout_marginEnd="75dp"
         android:layout_marginBottom="157dp"
-        android:text="Voltar" />
+        android:text="Voltar"
+        android:background="@drawable/rounded_button"/>
 
     <Spinner
         android:id="@+id/aparelhoSpinner"
