--- a/app/src/main/res/layout/activity_lista_usuarios.xml
+++ b/app/src/main/res/layout/activity_lista_usuarios.xml
@@ -45,7 +45,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="253dp"
         android:layout_marginBottom="15dp"
-        android:text="Voltar" />
+        android:text="Voltar"
+        android:background="@drawable/rounded_button"/>
 
     <Button
         android:id="@+id/deleteButton"
@@ -56,7 +57,8 @@
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="12dp"
         android:text="Excluir"
-        android:enabled="false"/>
+        android:enabled="false"
+        android:background="@drawable/rounded_button"/>
 
 </RelativeLayout>
 
