--- a/app/src/main/res/layout/activity_configuracoes.xml
+++ b/app/src/main/res/layout/activity_configuracoes.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,11 +8,11 @@
 
     <ToggleButton
         android:id="@+id/ligaDesligaButton"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        android:layout_width="140dp"
+        android:layout_height="45dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="41dp"
+        android:layout_marginStart="15dp"
         android:layout_marginBottom="311dp"
         android:textOff="Desligado"
         android:textOn="Ligado"
@@ -21,26 +20,23 @@
 
     <Button
         android:id="@+id/configurarButton"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
+        android:layout_width="140dp"
+        android:layout_height="45dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="39dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="309dp"
         android:text="Configurar"
         android:background="@drawable/rounded_button"/>
 
     <Button
         android:id="@+id/sairButton"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
+        android:layout_width="250dp"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="41dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginBottom="185dp"
-        android:text="Sair"
-        android:background="@drawable/rounded_button"/>
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="187dp"
+        android:background="@drawable/rounded_button"
+        android:text="Sair" />
 
 </RelativeLayout>
