--- a/app/src/main/res/layout/activity_configurar.xml
+++ b/app/src/main/res/layout/activity_configurar.xml
@@ -8,53 +8,41 @@
 
     <EditText
         android:id="@+id/temporizadorEditText"
-        android:layout_width="match_parent"
+        android:layout_width="378dp"
         android:layout_height="48dp"
         android:layout_below="@+id/aparelhoSpinner"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_centerInParent="true"
         android:hint="Temporizador"
         android:textColor="@color/white"
         android:textColorHint="#FBFAFA" />
 
     <Button
         android:id="@+id/gravarButton"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
+        android:layout_width="250dp"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="78dp"
-        android:layout_marginEnd="75dp"
-        android:layout_marginBottom="232dp"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="222dp"
         android:text="Gravar"
         android:background="@drawable/rounded_button"/>
 
     <Button
         android:id="@+id/retornarButton"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
+        android:layout_width="250dp"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="78dp"
-        android:layout_marginEnd="75dp"
-        android:layout_marginBottom="157dp"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="147dp"
         android:text="Voltar"
         android:background="@drawable/rounded_button"/>
 
     <Spinner
         android:id="@+id/aparelhoSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_alignParentStart="true"
+        android:layout_width="378dp"
+        android:layout_height="49dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="14dp"
+        android:layout_centerInParent="true"
         android:layout_marginTop="315dp"
-        android:layout_marginEnd="18dp"
         android:layout_marginBottom="16dp"
         android:foregroundTint="#F8F5F5"
         android:textColor="@color/white"
