--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
 
     <EditText
         android:id="@+id/emailEditText"
-        android:layout_width="379dp"
-        android:layout_height="51dp"
+        android:layout_width="378dp"
+        android:layout_height="49dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="15dp"
         android:layout_marginTop="310dp"
-        android:layout_marginEnd="17dp"
+        android:layout_marginEnd="15dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:textColor="@color/white"
@@ -30,7 +30,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="17dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="377dp"
         android:layout_marginEnd="15dp"
         android:hint="Senha"
@@ -41,7 +41,7 @@
     <Button
         android:id="@+id/novoButton"
         android:layout_width="140dp"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:layout_below="@+id/passwordEditText"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="70dp"
@@ -52,12 +52,11 @@
     <Button
         android:id="@+id/forgotPasswordLink"
         android:layout_width="250dp"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:layout_alignBottom="@+id/passwordEditText"
-        android:layout_centerHorizontal="true"
         android:layout_marginBottom="-211dp"
+        android:layout_centerInParent="true"
         android:text="Esqueci a senha"
-        android:textColor="#FFFFFFFF"
         android:clickable="true"
         android:background="@drawable/rounded_button"/>
 
@@ -65,10 +64,10 @@
     <Button
         android:id="@+id/loginButton"
         android:layout_width="140dp"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:layout_below="@+id/passwordEditText"
         android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="68dp"
         android:background="@drawable/rounded_button"
         android:text="Entrar" />
