--- a/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -8,32 +8,30 @@
 
     <Button
         android:id="@+id/atualizarPerfilButton"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
+        android:layout_width="140dp"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="124dp"
-        android:layout_marginBottom="300dp"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="296dp"
         android:text="Atualizar Perfil"
         android:background="@drawable/rounded_button"/>
 
     <Button
         android:id="@+id/configButton"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
+        android:layout_width="140dp"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="124dp"
+        android:layout_centerInParent="true"
         android:layout_marginBottom="216dp"
         android:text="Configuração"
         android:background="@drawable/rounded_button"/>
 
     <Button
         android:id="@+id/showUsersButton"
-        android:layout_width="160dp"
-        android:layout_height="50dp"
+        android:layout_width="140dp"
+        android:layout_height="45dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="124dp"
+        android:layout_centerInParent="true"
         android:layout_marginBottom="136dp"
         android:text="Listar Usuários"
         android:background="@drawable/rounded_button"/>
