--- a/app/src/main/res/layout/activity_cadastro_aparelho.xml
+++ b/app/src/main/res/layout/activity_cadastro_aparelho.xml
@@ -72,4 +72,15 @@
         android:clickable="true"
         android:text="Listar Aparelhos" />
 
+    <Button
+        android:id="@+id/bluetoothButton"
+        android:layout_width="140dp"
+        android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="197dp"
+        android:background="@drawable/rounded_button"
+        android:text="Bluetooth" />
+
 </RelativeLayout>
